Added basic scss

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -11,12 +11,50 @@
 }
 
 html {
-	//colores claros
+	--background-color: #f5f5f5;
+	--background-color-alternative: #ffffff;
+	--text-color: #16181c;
+	--primary-color: #f4b615;
+	--primary-color-contrast: #ffffff;
+	--disabled-color: #d9d9d9;
+	--disabled-color-contrast: #888888;
+	--error-color: #ff0000;
+	--transparent-color: #16181c30;
+	--note-red: #f28b82;
+	--note-pink: #fdcfe8;
+	--note-yellow: #fff475;
+	--note-green: #ccff90;
+	--note-blue: #aecbfa;
+	--note-purple: #d7aefb;
+
+	&[data-theme="dark"] {
+		--background-color: #000000;
+		--background-color-alternative: #16181c;
+		--text-color: #e7e9ea;
+		--primary-color: #f4b615;
+		--primary-color-contrast: #ffffff;
+		--disabled-color: #d9d9d9;
+		--disabled-color-contrast: #888888;
+		--error-color: #ff0000;
+		--transparent-color: #e7e9ea30;
+		--note-red: #5c2b29;
+		--note-pink: #5b2245;
+		--note-yellow: #635d19;
+		--note-green: #345920;
+		--note-blue: #2d555e;
+		--note-purple: #42275e;
+	}
 }
 
-html[data-theme="dark"] {
-	//colores oscuros
+body {
+	display: flex;
+	flex-direction: column;
+	background-color: var(--background-color);
+	font-family: var(--font-family);
+	color: var(--text-color);
+	font-size: 10px;
 }
+
 //------------------------------MEDIA QUERIES------------------------------//
 //#region smarthphone-width
 @media (max-width: var(--smarthphone-width)) {
